레이아웃 수정

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,21 @@
     <link rel="stylesheet" type="text/css" href="css/util.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="vendor/noui/nouislider.min.css">
+    <link rel="stylesheet" href="path/to/swiper.css"/>
+    <script type="text/javascript" src="path/to/swiper.js"></script>
+    <script type="text/javascript" src="path/to/vue.min.js"></script>
+    <script type="text/javascript" src="path/to/dist/vue-awesome-swiper.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
+/>
+
+<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <script type="text/javascript">
+      Vue.use(window.VueAwesomeSwiper)
+    </script>
   </head>
   <body>
     <noscript>
