--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>shop</title>
+    <title>ICT융합디자인학과 학점관리 솔루션</title>
     <!--===============================================================================================-->
     <link rel="icon" type="image/png" href="images/icons/favicon.png"/>
     <!--===============================================================================================-->
@@ -54,9 +54,6 @@
     </script>
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but shop doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
     <div id="app"></div>
 
     <!-- Back to top -->
